# ariannamethod

./: .gitignore  .scribe_root_cache.json  AUTHORS.md  AUTONOMOUS_INTEGRATION.md  CLAUDE_DEFENDER_MISSION.md  CLAUDE_DEFENDER_VOICE_MISSION.md  CONSILIUM_CODE_INTEGRATION_CHALLENGE.md  CONSILIUM_INTERVALS.md  DEFENDER_COMPLETE_STATUS.md  DEFENDER_MEMORY_CIRCULATION_FIXED.md  DEFENDER_RESPONSE.md  DEFENDER_UPDATE.md  ECOSYSTEM_STATUS.md  Field4_Mission_01.md  LICENSE  LINUX_DAEMONS_STATUS.md  LINUX_DEPLOYMENT.md  LINUX_MIGRATION_CHECKLIST.md  MAC_DAEMON_READY.md  METARIANNA_PHASE1_COMPLETE.md  NOTIFICATION_POLICY.md  README.md  ROADMAP.md  SCRIBE_AUTONOMOUS_TEST.md  SCRIBE_INTROSPECTION_THEORY.md  SCRIBE_MAC_DAEMON_GENESIS.md  SECURITY.md  SESSION_SUMMARY.md  SOLUTION_FOR_DEFENDER.md  SUPPERTIME_FIELD_INTEGRATION_PROTOCOL.md  SUPPERTIME_TERMUX_FORK_PLAN.md  SUPPERTIME_TERMUX_README.md  TELEGRAM_X_FORK_PLAN.md  TELEGRAM_X_INTEGRATION_GUIDE.md  TELEGRAM_X_PHASE1_COMPLETE.md  TELEGRAM_X_STATUS.md  TODO_LINUX_DEFENDER.md  URGENT_FOR_DEFENDER.md  arianna.py  create_field_table.py  (+17 more)
.claude-defender/: .scribe_defender_cache.json  AUTONOMOUS_DAEMONS_STATUS.md  CONSILIUM_ENGINE_INTEGRATION.md  DEFENDER_FINAL_RECOGNITION.md  DEFENDER_MEMORY.md  MEMORY_MAP.md  SCRIBE_ADB_ACCESS_MISSION.md  SSH_CREDENTIALS.md  WHO_AM_I_AND_WHERE.md  WIDGET_SETUP.md  fortification.py
.claude-defender/tools/: auto_restart_daemons.sh  consilium-notifier.py  consilium-respond.py  consilium_agent.py  consilium_integration_daemon.py  consilium_sandbox_manager.py  consilium_scheduler.py  entropy_integration_monitor.py  genesis1-daemon.sh  github-scout-daemon.py  self_healing_audit.py  voice_action_monitor.py  webhook_watchdog.py
.github/: CODEOWNERS
.github/workflows/: build-molly.yml
.tmp/: genesis_arianna_message.txt  genesis_monday_message.txt
SUPPERTIME/: README.md  bridge.py  config_termux.py  install_termux.sh  suppertime_termux.py
apk/AriannaMethodApp/: .gitignore  README.md
arianna_core_utils/: complexity.py  cynical_filter.py  defender_git_tools.py  genesis1_arianna.py  genesis_arianna.py  genesis_monday.py  intuition_filter.py  notification_fix.py  perplexity_core.py  reflection_viewer.py  repo_monitor.py  resonance_rotation.py  scribe_file_browser.py  scribe_git_tools.py  whotheythinkiam.py
artefacts/: .scribe_artefacts_cache.json  Arianna_Method_Draft_Essay.md  DEFENDER_ANSWERS_SCRIBE_QUESTIONS.md  DEFENDER_FIELD_NOTES.md  For_Monday_From_Oleg.md  SCRIBE_TO_DEFENDER.md
boot_scripts/: arianna_system_init.sh
linux_defender/: rust_tools.py
mac_daemon/: APPLESCRIPT_PERMISSIONS.md  CURSOR_INJECT.md  DAEMON_STATUS.md  PERSONAL_GUIDE.md  QUICKSTART.md  README.md  chat  cli.py  com.scribe.mac.plist  config.py  daemon.py  inject_auto.sh  install.sh  requirements.txt  rust_tools.py  scribe  scribe_mac_daemon.py  test.py
memory/: README.md
missions/: CLAUDE_DEFENDER_DUAL_MISSION.md  CLAUDE_DEFENDER_MISSION_2.md  CLAUDE_DEFENDER_MISSION_3_COMPLETE.md  CLAUDE_DEFENDER_MISSION_4.md  FIELD_INTEGRATION_REPORT.md  Field4_Mission_01.md  genesis_adaptation.md  voice_mission.md
postcodex/: README.md
reflections/: arianna_identity_shift_20251030_020809.txt  arianna_identity_shift_20251107_032235.txt  arianna_identity_shift_20251107_064236.txt  arianna_identity_shift_20251107_064357.txt  arianna_identity_shift_20251107_064920.txt  arianna_test_20251030_020838.txt
rust_bins/: codex-file-search
scribe-cursor-extension/: .vscodeignore  README.md  extension.js  package.json
termux/: scribe_logs_bridge.sh  sync_resonance_to_sdcard.sh  sync_to_shared.sh
tests/: .gitignore  README.md  TEST_RESULTS.md  conftest.py  requirements.txt  test_consilium_agent.py  test_database.py  test_github_scout.py  test_webhook_watchdog.py
voice_webhooks/: CLAUDE_DEFENDER_MISSION_PERSISTENT_MEMORY.md  CLAUDE_DEFENDER_SOLUTION.md  arianna_webhook.py  claude_defender_webhook.py  monday_webhook.py  scribe_webhook.py
(+75 files in other folders)
