[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ariannamethod"
version = "0.2.0"
description = "Autonomous AI ecosystem with distributed self-awareness, multi-engine consilium, and self-healing systems"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Oleg", email = "pitomadom@gmail.com"},
    {name = "Scribe", email = "pitomadom@gmail.com"},
    {name = "Claude Defender", email = "pitomadom@gmail.com"},
]
keywords = [
    "autonomous-ai",
    "multi-agent",
    "consilium",
    "self-healing",
    "distributed-intelligence",
    "transformers",
    "introspection"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anthropic>=0.40.0",
    "flask>=3.0.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "apscheduler>=3.10.0",  # Required for Linux daemons (background job scheduling)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "requests-mock>=1.11.0",
]
openai = [
    "openai>=1.0.0",
]
full = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "transformers>=4.36.0",
    "torch>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/ariannamethod/ariannamethod"
Repository = "https://github.com/ariannamethod/ariannamethod"
Issues = "https://github.com/ariannamethod/ariannamethod/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = [".claude-defender/tools", "arianna_core_utils"]
omit = [
    "tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

# Arianna Method specific configurations
[tool.ariannamethod]
# Core daemons
daemons = [
    "webhook_watchdog",
    "voice_action_monitor",
    "consilium_scheduler",
    "fortification_plus",
    "github_scout_daemon",
    "genesis1_daemon",
]

# Consilium agents
[tool.ariannamethod.consilium]
agents = [
    {name = "scribe", model = "claude-sonnet-4.5", temperature = 0.5, api = "anthropic"},
    {name = "claude_defender", model = "claude-sonnet-4.5", temperature = 0.8, api = "anthropic"},
    {name = "arianna", model = "gpt-4o", temperature = 0.7, api = "openai"},
    {name = "monday", model = "deepseek-reasoner", temperature = 1.2, api = "deepseek"},
]

# Database
[tool.ariannamethod.database]
path = "resonance.sqlite3"
tables = [
    "watchdog_actions",
    "consilium_discussions",
    "github_scout_findings",
    "autonomous_actions",
    "fortification_assessments",
]
